methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:6: error: Boolean does not take parameters
    forward()
           ^